Tommy app icon functional logo in menu header driver records page cleanup online/offline status from Toggle class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="week">week</string>
     <string name="month">month</string>
     <string name="logo">logo</string>
+    <string name="tab">\u0009\u0009\u0009\u0009</string>
 </resources>
